fix: named credential needed namespace, scheduler is now global and components with relaxed csp property

--- a/force-app/main/default/classes/AdyenSchedulableWebhookJob.cls
+++ b/force-app/main/default/classes/AdyenSchedulableWebhookJob.cls
@@ -1,5 +1,5 @@
-public with sharing class AdyenSchedulableWebhookJob implements Schedulable {
-    public void execute(SchedulableContext schedulableContext) {
+global with sharing class AdyenSchedulableWebhookJob implements Schedulable {
+    global void execute(SchedulableContext schedulableContext) {
         AdyenWebhookBatch adyenWebhookBatch = new AdyenWebhookBatch();
         Database.executeBatch(adyenWebhookBatch);
     }
