fix: unused variable

--- a/force-app/main/default/classes/AdyenPaymentRequestBuilderTest.cls
+++ b/force-app/main/default/classes/AdyenPaymentRequestBuilderTest.cls
@@ -37,7 +37,7 @@ private class AdyenPaymentRequestBuilderTest {
         ClientDetails clientDetails = TestDataFactory.createClientDetails('unhandled');
         clientDetails.paymentMethodType = 'unhandled';
         try {   // when
-            PaymentsRequest paymentsRequest = AdyenPaymentRequestBuilder.create(clientDetails, null, null);
+            AdyenPaymentRequestBuilder.create(clientDetails, null, null);
             Assert.fail();
         } catch (Exception ex) {    // then
             Assert.isInstanceOfType(ex, AdyenB2BUtils.AdyenCustomException.class);
