--- a/force-app/main/default/classes/AdyenPaymentRequestBuilder.cls
+++ b/force-app/main/default/classes/AdyenPaymentRequestBuilder.cls
@@ -3,7 +3,9 @@ public with sharing class AdyenPaymentRequestBuilder {
         if (clientDetails.getPaymentMethodDetails() instanceof CardDetails) {
             return buildCardPaymentRequest(clientDetails, cart, adyenAdapter);
         } else if (clientDetails.getPaymentMethodDetails() instanceof SepaDirectDebitDetails) {
-            return buildSepaPaymentRequest(clientDetails, cart, adyenAdapter);
+            return buildCommonPaymentsRequest(clientDetails, cart, adyenAdapter);
+        } else if (clientDetails.getPaymentMethodDetails() instanceof ACHDetails) {
+            return buildCommonPaymentsRequest(clientDetails, cart, adyenAdapter);
         } else {
             throw new AdyenB2BUtils.AdyenCustomException('Unhandled payment method of type: ' + clientDetails.paymentMethodType);
         }
@@ -15,10 +17,6 @@ public with sharing class AdyenPaymentRequestBuilder {
         paymentsRequest.authenticationData.threeDSRequestData = new ThreeDSRequestData();
         paymentsRequest.authenticationData.threeDSRequestData.nativeThreeDS = 'preferred';
         return paymentsRequest;
-    }
-
-    private static PaymentsRequest buildSepaPaymentRequest(ClientDetails clientDetails, WebCart cart, Adyen_Adapter__mdt adyenAdapter) {
-        return buildCommonPaymentsRequest(clientDetails, cart, adyenAdapter);
     }
 
     private static PaymentsRequest buildCommonPaymentsRequest(ClientDetails clientDetails, WebCart cart, Adyen_Adapter__mdt adyenAdapter) {
